--- a/css/estilo.css
+++ b/css/estilo.css
@@ -23,19 +23,19 @@
   font-weight: bolder; }
 
 .bodyPrincipal {
-  background: linear-gradient(to bottom, #B3E8E5, #3BACB6);
+  background: #343434;
   font-family: 'Oswald', sans-serif;
   padding: 0;
   color: aliceblue; }
 
 footer {
-  background-color: #2F8F9D;
+  background-color: black;
   font-family: 'Nunito', sans-serif;
   font-size: 32px;
   height: 400px; }
 
 header {
-  background-color: #2F8F9D; }
+  background-color: black; }
   header p {
     color: aliceblue;
     font-size: 64px;
@@ -47,31 +47,31 @@ header {
   .navegadorPrincipal a {
     color: aliceblue; }
     .navegadorPrincipal a:hover {
-      background-color: #B3E8E5;
-      color: #2F8F9D;
+      background-color: #343434;
+      color: #E6B31E;
       font-weight: bolder; }
 
 .headerPaginas {
-  background-color: #B3E8E5;
+  background-color: #343434;
   height: 70px; }
   .headerPaginas a {
-    color: #2F8F9D;
+    color: aliceblue;
     font-family: 'Nunito', sans-serif;
     font-size: 20px; }
 
 .bodyPaginas {
-  background-color: #2F8F9D;
+  background-color: black;
   color: aliceblue;
   font-family: 'Oswald', sans-serif; }
 
 .footerPaginas {
-  background-color: #B3E8E5;
-  color: #2F8F9D;
+  background-color: #343434;
+  color: aliceblue;
   font-size: 32px;
   font-weight: bolder; }
 
 .contenedorFormulario {
-  background-color: #B3E8E5;
+  background-color: #E6B31E;
   width: auto;
   text-align: center;
   border-radius: 4px;
@@ -80,16 +80,16 @@ header {
   border: 2px solid;
   font-family: 'Oswald', sans-serif; }
   .contenedorFormulario h3 {
-    color: #2F8F9D;
+    color: black;
     font-size: 32px;
     font-weight: bolder;
     font-family: 'Oswald', sans-serif; }
   .contenedorFormulario input {
     width: 50%;
     border-radius: 5px;
-    background-color: #2F8F9D;
+    background-color: #343434;
     font-family: 'Nunito', sans-serif;
-    color: #2C3639;
+    color: aliceblue;
     font-weight: bolder;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -99,7 +99,7 @@ header {
     margin-top: 5px;
     margin-bottom: 5px;
     border-radius: 5px;
-    background-color: #2F8F9D;
+    background-color: #343434;
     text-align: center;
     color: aliceblue;
     font-weight: bolder;
