--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -7,7 +7,7 @@
 
 
 .bodyPrincipal {
-    background: linear-gradient(to bottom,#B3E8E5,#3BACB6);
+    background: #343434;
     font-family: 'Oswald', sans-serif;
     padding: 0;
     color: aliceblue;
@@ -22,7 +22,7 @@ footer {
 }
 
 header {
-    background-color: #2F8F9D;
+    background-color:black;
     
     
     p {
@@ -42,8 +42,8 @@ header {
         color: aliceblue;
 
         &:hover {
-            background-color: #B3E8E5;
-            color: #2F8F9D;
+            background-color:#343434;
+            color:#E6B31E;
             font-weight: bolder;
            
         }
@@ -53,13 +53,13 @@ header {
 }
 
 .headerPaginas {
-    background-color: #B3E8E5;
+    background-color: #343434;
     height: 70px;
 
    
     
     a {
-        color: #2F8F9D;
+        color:aliceblue;
         font-family:'Nunito', sans-serif;
         font-size: 20px;
     }
@@ -75,15 +75,15 @@ header {
 
 .footerPaginas {
     
-    background-color: #B3E8E5;
-    color: #2F8F9D;
+    background-color:#343434;
+    color: aliceblue;
     font-size: 32px;
     font-weight: bolder;
 }
 
 
 .contenedorFormulario {
-    background-color:#B3E8E5;
+    background-color: #E6B31E;
     width: auto;
     text-align: center;
     border-radius: 4px;
@@ -93,7 +93,7 @@ header {
     font-family: 'Oswald', sans-serif;
 
     h3 {
-        color: #2F8F9D;
+        color: black;
         font-size: 32px;
         font-weight: bolder;
         font-family: 'Oswald', sans-serif;
@@ -102,9 +102,9 @@ header {
     input {
         width: 50%;
         border-radius: 5px;
-        background-color: #2F8F9D;
+        background-color:#343434;
         font-family:'Nunito', sans-serif;
-        color:#2C3639;
+        color:aliceblue;
         font-weight: bolder;
         margin-top: 5px;
         margin-bottom: 5px;
@@ -119,7 +119,7 @@ header {
         margin-top: 5px;
         margin-bottom: 5px;
         border-radius: 5px;
-        background-color: #2F8F9D;
+        background-color:#343434;
         text-align: center;
         color:aliceblue;
         font-weight: bolder;
