--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -17,7 +17,7 @@
 footer {
     background-color:$color-primario;
     font-family:'Nunito', sans-serif;
-    font-size: 32px;
+    font-size: 2rem;
     height: 400px;
 }
 
@@ -27,8 +27,9 @@ header {
     
     p {
         color: aliceblue;
-        font-size: 64px;
+        font-size: 3rem;
         font-family:'Nunito', sans-serif;
+        padding-top: 10px;
     }
     
    
@@ -77,8 +78,14 @@ header {
     
     background-color:#343434;
     color: aliceblue;
-    font-size: 32px;
-    font-weight: bolder;
+    font-size: 2rem;
+    font-weight: lighter;
+    padding-top: 50px;
+
+    h3 {
+        
+        font-size: 3rem;
+    }
 }
 
 
@@ -124,6 +131,33 @@ header {
         color:aliceblue;
         font-weight: bolder;
         border-radius: 5px;
+    }
+    
+}
+
+
+.contenedorItems {
+    padding: 2px;
+    
+    div {
+        height: 350px;
+        border: solid 1px;
+        box-sizing: border-box;
+        border-color: #2C3639;
+        margin: auto;        
+
+    }
+}
+
+
+
+.contenedorMain {
+    padding: 70px;
+
+    h1 {
+        font-size: 3rem;
+        margin-bottom: 100px;
+        text-align: center;
     }
     
 }
